ncp-features-example/2.3.0-networkpolicy-with-another-ns/nginx-demo-deployments.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: default
  labels:
    feature: client
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
